--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title></title>
+  <title>Fylo</title>
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 
+  <h1 class="visually-hidden">Fylo</h1>
 
 
 
