--- a/index.html
+++ b/index.html
@@ -10,6 +10,28 @@
 
   <h1 class="visually-hidden">Fylo</h1>
 
+  <header class="site-header">
+    <div class="container">
+
+      <nav class="sitenav">
+        <a href="index.html" class="site-logo">
+          <img src="img/logo.svg" width="176" height="52" alt="Fylo - site logo">
+        </a>
+
+        <ul class="sitenav__list">
+          <li class="sitenav__item">
+            <a href="#" class="sitenav__link">Features</a>
+          </li>
+          <li class="sitenav__item">
+            <a href="#" class="sitenav__link">Team</a>
+          </li>
+          <li class="sitenav__item">
+            <a href="#" class="sitenav__link">Features</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
 
   <script src="js/main.js"></script>
