--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
       <nav class="sitenav">
         <a href="index.html" class="site-logo">
-          <img src="img/logo.svg" width="176" height="52" alt="Fylo - site logo">
+          <img class="site-logo__img" src="img/logo.svg" width="176" height="52" alt="Fylo - site logo">
         </a>
 
         <ul class="sitenav__list">
@@ -26,7 +26,7 @@
             <a href="#" class="sitenav__link">Team</a>
           </li>
           <li class="sitenav__item">
-            <a href="#" class="sitenav__link">Features</a>
+            <a href="#" class="sitenav__link">Sign In</a>
           </li>
         </ul>
       </nav>
