--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
   <main class="main">
     <section class="intro">
-      <div class="container">
-        <img src="img/intro-bg.png" width="720" height="534" srcset="img/intro-bg@2x.png" alt="intro section image">
+      <div class="container intro__container">
+        <img class="intro__img" src="img/intro-bg.png" width="720" height="534" srcset="img/intro-bg@2x.png" alt="intro section image">
         <h2 class="intro__title">All your files in one secure location, accessible anywhere.</h2>
         <p class="intro__text">Fylo stores all your most important files in one secure location. Access them wherever you need, share and collaborate with friends family, and co-workers.</p>
         <a href="3" class="intro__link">Get Started</a>
