--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <img class="intro__img" src="img/intro-bg.png" width="720" height="534" srcset="img/intro-bg@2x.png" alt="intro section image">
         <h2 class="intro__title">All your files in one secure location, accessible anywhere.</h2>
         <p class="intro__text">Fylo stores all your most important files in one secure location. Access them wherever you need, share and collaborate with friends family, and co-workers.</p>
-        <a href="3" class="intro__link">Get Started</a>
+        <a href="#" class="intro__link">Get Started</a>
       </div>
     </section>
   </main>
