complate about section html

--- a/index.html
+++ b/index.html
@@ -42,6 +42,35 @@
         <a href="#" class="intro__link">Get Started</a>
       </div>
     </section>
+
+    <section class="about">
+      <h2 class="visually-hidden">About section</h2>
+      <div class="about__container">
+        <ul class="about__list">
+
+          <li class="about__item about-item about-item--access">
+            <h3 class="about-item__title">Access your files, anywhere</h3>
+            <p class="about-item__text">The ability to use a smartphone, tablet, or computer to access your account means your files follow you everywhere.</p>
+          </li>
+
+          <li class="about__item about-item about-item--security">
+            <h3 class="about-item__title">Security you can trust</h3>
+            <p class="about-item__text">2-factor authentication and user-controlled encryption are just a couple of the security features we allow to help secure your files.</p>
+          </li>
+
+          <li class="about__item about-item about-item--collaboration">
+            <h3 class="about-item__title">Real-time collaboration</h3>
+            <p class="about-item__text">Securely share files and folders with friends, family and colleagues for live collaboration. No email attachments required.</p>
+          </li>
+
+          <li class="about__item about-item about-item--store">
+            <h3 class="about-item__title">Store any type of file</h3>
+            <p class="about-item__text">Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all file types to be securely stored and shared.</p>
+          </li>
+
+        </ul>
+      </div>
+    </section>
   </main>
 
 
