add css to demo section

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
     <section class="demo">
       <div class="container demo__container">
-        <img src="img/demo-bg.png" width="614" height="463" srcset="img/demo-bg@2x.png" alt="demo section - image">
+        <img class="demo__img" src="img/demo-bg.png" width="614" height="463" srcset="img/demo-bg@2x.png" alt="demo section - image">
         <div class="demo__right">
           <h2 class="demo__title">Stay productive, wherever you are</h2>
           <p class="demo__text">Never let location be an issue when accessing your files. Fylo has you covered for all of your file storage needs.</p>
