add blockquote section html

--- a/index.html
+++ b/index.html
@@ -83,6 +83,48 @@
         </div>
       </div>
     </section>
+
+    <section class="blockquote">
+      <h2 class="visually-hidden">Blockquote section</h2>
+      <div class="container">
+        <ul class="blockquote__list">
+
+          <li class="blockquote__item">
+            <blockquote>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.
+            </blockquote>
+            <div class="blockquote__user-info blockquote__user-info--satish">
+              <div>
+                <p class="blockquote__user-name">Satish Patel</p>
+                <p class="blockquote__user-profession">Founder & CEO, Huddle</p>
+              </div>
+            </div>
+          </li>
+
+          <li class="blockquote__item">
+            <blockquote>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.
+            </blockquote>
+            <div class="blockquote__user-info blockquote__user-info--bruce">
+              <div>
+                <p class="blockquote__user-name">Bruce McKenzie</p>
+                <p class="blockquote__user-profession">Founder & CEO, Huddle</p>
+              </div>
+            </div>
+          </li>
+
+          <li class="blockquote__item">
+            <blockquote>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.
+            </blockquote>
+            <div class="blockquote__user-info blockquote__user-info--iva">
+              <div>
+                <p class="blockquote__user-name">Iva Boyd</p>
+                <p class="blockquote__user-profession">Founder & CEO, Huddle</p>
+              </div>
+            </div>
+          </li>
+
+        </ul>
+      </div>
+    </section>
   </main>
 
 
