add styles to blockquote section

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <ul class="blockquote__list">
 
           <li class="blockquote__item">
-            <blockquote>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.
+            <blockquote class="blockquote__blockquote-text">Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.
             </blockquote>
             <div class="blockquote__user-info blockquote__user-info--satish">
               <div>
@@ -101,7 +101,7 @@
           </li>
 
           <li class="blockquote__item">
-            <blockquote>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.
+            <blockquote class="blockquote__blockquote-text">Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.
             </blockquote>
             <div class="blockquote__user-info blockquote__user-info--bruce">
               <div>
@@ -112,7 +112,7 @@
           </li>
 
           <li class="blockquote__item">
-            <blockquote>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.
+            <blockquote class="blockquote__blockquote-text">Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.
             </blockquote>
             <div class="blockquote__user-info blockquote__user-info--iva">
               <div>
