add css to contact section

--- a/index.html
+++ b/index.html
@@ -128,13 +128,15 @@
 
     <section class="contact" id="contact">
       <div class="contact__container">
-        <h2 class="contact__title">Get early access today</h2>
-        <p class="contact__text">It only takes a minute to sign up and our free starter tier is extremely generous. If you have any questions, our support team would be happy to help you.</p>
+        <div class="contact__wrapper">
+          <h2 class="contact__title">Get early access today</h2>
+          <p class="contact__text">It only takes a minute to sign up and our free starter tier is extremely generous. If you have any questions, our support team would be happy to help you.</p>
 
-        <form class="contact-form" action="https://echo.htmlacademy.ru" method="post">
-          <input type="email" class="contact-form__input" name="email" placeholder="email@example.com" required pattern="^([a-z0-9_\.-]+)@([\da-z\.-]+)\.([a-z\.]{2,6})$">
-          <button class="contact-form__button" type="submit">Get Started For Free</button>
-        </form>
+          <form class="contact-form" action="https://echo.htmlacademy.ru" method="post">
+            <input type="email" class="contact-form__input" name="email" placeholder="email@example.com" required pattern="^([a-z0-9_\.-]+)@([\da-z\.-]+)\.([a-z\.]{2,6})$">
+            <button class="contact-form__button" type="submit">Get Started For Free</button>
+          </form>
+        </div>
       </div>
     </section>
   </main>
