add footer html

--- a/index.html
+++ b/index.html
@@ -139,6 +139,65 @@
         </div>
       </div>
     </section>
+
+    <section class="site-footer">
+      <div class="container">
+        <img src="img/logo.svg" width="176" height="52" alt="Site logo - Fylo">
+        <div class="footer__bottom">
+          <div class="footer__address">
+            <p class="footer__address-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+          </div>
+          <div class="footer__phone">
+            <a href="tel:+998977690260">+1-543-123-4567</a>
+            <a href="mailto:sanjarabduxamidov1311@gmail.com">example@fylo.com</a>
+          </div>
+          <div class="footer__nav">
+            <ul class="footer__sitenav">
+              <li class="footer__sitenav-item">
+                <a href="#" class="footer__sitenav-link">About Us</a>
+              </li>
+
+              <li class="footer__sitenav-item">
+                <a href="#" class="footer__sitenav-link">Jobs</a>
+              </li>
+
+              <li class="footer__sitenav-item">
+                <a href="#" class="footer__sitenav-link">Press</a>
+              </li>
+
+              <li class="footer__sitenav-item">
+                <a href="#" class="footer__sitenav-link">Blog</a>
+              </li>
+
+              <li class="footer__sitenav-item">
+                <a href="#" class="footer__sitenav-link">Contact Us</a>
+              </li>
+
+              <li class="footer__sitenav-item">
+                <a href="#" class="footer__sitenav-link">Terms</a>
+              </li>
+
+              <li class="footer__sitenav-item">
+                <a href="#" class="footer__sitenav-link">Privacy</a>
+              </li>
+
+            </ul>
+          </div>
+
+          <div class="footer__social-links">
+            <a class="footer__facebook-link" href="#" target="_blank">
+              <img class="footer__facebook-logo" src="img/facebook.svg" width="32" height="31" alt="facebook link">
+            </a>
+            <a class="footer__instagram-link" href="#" target="_blank">
+              <img class="footer__twitter-logo" src="img/twitter.svg" width="32" height="31" alt="twitter link">
+            </a>
+            <a class="footer__instagram-link" href="#" target="_blank">
+              <img class="footer__instagram-logo" src="img/instagram.svg" width="32" height="31" alt="instagram link">
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 
 
