add footer html

--- a/index.html
+++ b/index.html
@@ -142,14 +142,14 @@
 
     <section class="site-footer">
       <div class="container">
-        <img src="img/logo.svg" width="176" height="52" alt="Site logo - Fylo">
+        <img class="footer__logo" src="img/logo.svg" width="176" height="52" alt="Site logo - Fylo">
         <div class="footer__bottom">
           <div class="footer__address">
             <p class="footer__address-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
           </div>
           <div class="footer__phone">
-            <a href="tel:+998977690260">+1-543-123-4567</a>
-            <a href="mailto:sanjarabduxamidov1311@gmail.com">example@fylo.com</a>
+            <a class="footer__tel" href="tel:+998977690260">+1-543-123-4567</a>
+            <a class="footer__mail" href="mailto:sanjarabduxamidov1311@gmail.com">example@fylo.com</a>
           </div>
           <div class="footer__nav">
             <ul class="footer__sitenav">
@@ -168,7 +168,9 @@
               <li class="footer__sitenav-item">
                 <a href="#" class="footer__sitenav-link">Blog</a>
               </li>
+            </ul>
 
+            <ul class="footer__sitenav">
               <li class="footer__sitenav-item">
                 <a href="#" class="footer__sitenav-link">Contact Us</a>
               </li>
