fixed and add hover and active to links

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             <a class="footer__facebook-link" href="#" target="_blank">
               <img class="footer__facebook-logo" src="img/facebook.svg" width="32" height="31" alt="facebook link">
             </a>
-            <a class="footer__instagram-link" href="#" target="_blank">
+            <a class="footer__twitter-link" href="#" target="_blank">
               <img class="footer__twitter-logo" src="img/twitter.svg" width="32" height="31" alt="twitter link">
             </a>
             <a class="footer__instagram-link" href="#" target="_blank">
